made css changes to fix games played from overlapping their div container

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,6 +13,7 @@ html, body {
 body {
   position: relative;
   overflow-y: hidden !important;
+  background-color: #31313C;
 }
 
 .btn {
